--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="./dist/main.js"></script>
   <link rel="stylesheet" href="./dist/reset.css">
   <link rel="stylesheet" href="./dist/style.css">
-  <title>Document</title>
+  <title>Compatibility Calculator</title>
 </head>
 <body>
   <div id="results"></div>
